[project]
name = "loopyagents"
version = "0.1.0"
description = "AI agents that think and act continuously, dynamically adapting to changing environments in real time."
authors = [
    {name = "Vlad Fatu",email = "colegu123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smolagents[litellm] (>=1.21.1,<2.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
